--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
 
 <body>
 <h1>Hello World!</h1>
+<h1> id = "message"</h1>
+<script src="utils.js"></script>
+<script src="home.js"></script>
 
-<script src="script.js"></script>
+<script>
+  alert('Hello World');
+</script>
 </body>
 
 </html>
